Added CLI stuff, adding quickstart instructions

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,54 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation"
+description: 'Borea is an open-source platform that generates SDKs from an OpenAPI spec'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+<img className='block dark:hidden' src='/images/hero-light.png' alt='Hero Light' />
+<img className='hidden dark:block' src='/images/hero-dark.png' alt='Hero Dark' />
 
-## Setting up
+Borea is built so developers, startups, and enterprises can ship the tools their users want in minutes, with the peace
+of mind that they will always stay up to date.
 
-The first step to world-class documentation is setting up your editing environments.
+## Key Features
+
+Check out some of our key features!
+
+<AccordionGroup>
+	<Accordion title='Idiomatic SDKs'>
+		Our generators are built by language experts. This provides the best user experience for your users, while
+		makeing each SDK feel hand crafted.
+	</Accordion>
+	<Accordion title='Production Ready'>
+		Each SDK has rigorous data modeling, testing, and errorhandling to ensure each one is ready to put in your users
+		hands the moment you deploy it.
+	</Accordion>
+	<Accordion title='Deploy Remotely'>
+		We automatically deploy your production ready SDK to the repository of your choice.
+
+    **Supported Registries:**
+    - PyPi
+  </Accordion>
+  <Accordion title='SDK Testing'>
+    Ensure your SDKs work with your API using our quite of generated integrations tests. The tests only update when
+    your API does so you know you have full coverage.
+  </Accordion>
+  <Accordion title='CI/CD'>
+    Integrate our CLI into your pipeline so that your SDKs always stay up to date with your API.
+  </Accordion>
+  <Accordion title='Open Source'>
+    Our generators are open source under the MIT license meaning anyone can fork, and improve them. 
+    
+    We believe that open source is the future not only because we are able to build with transparency, but because it enables us to
+    build the best product possible, together.
+  </Accordion>
+
+</AccordionGroup>
 
 <CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
+	<Card title='Quick Start' icon='code' href='/cli/quick-start'>
+		Generate and publish your first SDK
+	</Card>
+	<Card title='Request a Language' icon='flag' href='mailto:hey@borea.dev?subject=SDK%20Language%20Request'>
+		Want an SDK in a specific language? Reach out!
+	</Card>
 </CardGroup>
