--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -4,20 +4,22 @@ description: 'Example section for showcasing API endpoints'
 ---
 
 <Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
+	Our API is undergoing rapid and often breaking changes. We recommend using our CLI for your implementation as they
+	are developed in tandem to prevent drift.
 </Note>
 
 ## Welcome
 
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
+There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and
+[MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the
+following OpenAPI specification.
 
 <Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
+	title='Plant Store Endpoints'
+	icon='leaf'
+	href='https://github.com/mintlify/starter/blob/main/api-reference/openapi.json'
 >
-  View the OpenAPI specification file
+	View the OpenAPI specification file
 </Card>
 
 ## Authentication
