--- a/essentials/navigation.mdx
+++ b/essentials/navigation.mdx
@@ -10,7 +10,8 @@ You will likely update `docs.json` every time you add a new page. Pages do not s
 
 ## Navigation syntax
 
-Our navigation syntax is recursive which means you can make nested navigation groups. You don't need to include `.mdx` in page names.
+Our navigation syntax is recursive which means you can make nested navigation groups. You don't need to include `.mdx`
+in page names.
 
 <CodeGroup>
 
@@ -58,11 +59,13 @@ Our navigation syntax is recursive which means you can make nested navigation gr
 
 Simply put your MDX files in folders and update the paths in `docs.json`.
 
-For example, to have a page at `https://yoursite.com/your-folder/your-page` you would make a folder called `your-folder` containing an MDX file called `your-page.mdx`.
+For example, to have a page at `https://yoursite.com/your-folder/your-page` you would make a folder called `your-folder`
+containing an MDX file called `your-page.mdx`.
 
 <Warning>
 
-You cannot use `api` for the name of a folder unless you nest it inside another folder. Mintlify uses Next.js which reserves the top-level `api` folder for internal server calls. A folder name such as `api-reference` would be accepted.
+You cannot use `api` for the name of a folder unless you nest it inside another folder. Mintlify uses Next.js which
+reserves the top-level `api` folder for internal server calls. A folder name such as `api-reference` would be accepted.
 
 </Warning>
 
@@ -84,4 +87,5 @@ You cannot use `api` for the name of a folder unless you nest it inside another 
 
 ## Hidden Pages
 
-MDX files not included in `docs.json` will not show up in the sidebar but are accessible through the search bar and by linking directly to them.
+MDX files not included in `docs.json` will not show up in the sidebar but are accessible through the search bar and by
+linking directly to them.
