--- a/essentials/settings.mdx
+++ b/essentials/settings.mdx
@@ -4,7 +4,8 @@ description: 'Mintlify gives you complete control over the look and feel of your
 icon: 'gear'
 ---
 
-Every Mintlify site needs a `docs.json` file with the core configuration settings. Learn more about the [properties](#properties) below.
+Every Mintlify site needs a `docs.json` file with the core configuration settings. Learn more about the
+[properties](#properties) below.
 
 ## Properties
 
@@ -34,51 +35,50 @@ Example: `mintlify`
   </Expandable>
 </ResponseField>
 
-<ResponseField name="logo" type="string or object">
-  Path to logo image or object with path to "light" and "dark" mode logo images
-  <Expandable title="Logo">
-    <ResponseField name="light" type="string">
-      Path to the logo in light mode
-    </ResponseField>
-    <ResponseField name="dark" type="string">
-      Path to the logo in dark mode
-    </ResponseField>
-    <ResponseField name="href" type="string" default="/">
-      Where clicking on the logo links you to
-    </ResponseField>
-  </Expandable>
+<ResponseField name='logo' type='string or object'>
+	Path to logo image or object with path to "light" and "dark" mode logo images
+	<Expandable title='Logo'>
+		<ResponseField name='light' type='string'>
+			Path to the logo in light mode
+		</ResponseField>
+		<ResponseField name='dark' type='string'>
+			Path to the logo in dark mode
+		</ResponseField>
+		<ResponseField name='href' type='string' default='/'>
+			Where clicking on the logo links you to
+		</ResponseField>
+	</Expandable>
 </ResponseField>
 
-<ResponseField name="favicon" type="string">
-  Path to the favicon image
+<ResponseField name='favicon' type='string'>
+	Path to the favicon image
 </ResponseField>
 
-<ResponseField name="colors" type="Colors">
-  Hex color codes for your global theme
-  <Expandable title="Colors">
-    <ResponseField name="primary" type="string" required>
-      The primary color. Used for most often for highlighted content, section
-      headers, accents, in light mode
-    </ResponseField>
-    <ResponseField name="light" type="string">
-      The primary color for dark mode. Used for most often for highlighted
-      content, section headers, accents, in dark mode
-    </ResponseField>
-    <ResponseField name="dark" type="string">
-      The primary color for important buttons
-    </ResponseField>
-    <ResponseField name="background" type="object">
-      The color of the background in both light and dark mode
-      <Expandable title="Object">
-        <ResponseField name="light" type="string" required>
-          The hex color code of the background in light mode
-        </ResponseField>
-        <ResponseField name="dark" type="string" required>
-          The hex color code of the background in dark mode
-        </ResponseField>
-      </Expandable>
-    </ResponseField>
-  </Expandable>
+<ResponseField name='colors' type='Colors'>
+	Hex color codes for your global theme
+	<Expandable title='Colors'>
+		<ResponseField name='primary' type='string' required>
+			The primary color. Used for most often for highlighted content, section headers, accents, in light mode
+		</ResponseField>
+		<ResponseField name='light' type='string'>
+			The primary color for dark mode. Used for most often for highlighted content, section headers, accents, in
+			dark mode
+		</ResponseField>
+		<ResponseField name='dark' type='string'>
+			The primary color for important buttons
+		</ResponseField>
+		<ResponseField name='background' type='object'>
+			The color of the background in both light and dark mode
+			<Expandable title='Object'>
+				<ResponseField name='light' type='string' required>
+					The hex color code of the background in light mode
+				</ResponseField>
+				<ResponseField name='dark' type='string' required>
+					The hex color code of the background in dark mode
+				</ResponseField>
+			</Expandable>
+		</ResponseField>
+	</Expandable>
 </ResponseField>
 
 <ResponseField name="topbarLinks" type="TopbarLink[]">
@@ -113,9 +113,9 @@ Example: `mintlify`
   </Expandable>
 </ResponseField>
 
-<ResponseField name="versions" type="string[]">
-  Array of version names. Only use this if you want to show different versions
-  of docs with a dropdown in the navigation bar.
+<ResponseField name='versions' type='string[]'>
+	Array of version names. Only use this if you want to show different versions of docs with a dropdown in the
+	navigation bar.
 </ResponseField>
 
 <ResponseField name="anchors" type="Anchor[]">
@@ -150,32 +150,32 @@ Example: `mintlify`
   </Expandable>
 </ResponseField>
 
-<ResponseField name="topAnchor" type="Object">
-  Override the default configurations for the top-most anchor.
-  <Expandable title="Object">
-    <ResponseField name="name" default="Documentation" type="string">
-      The name of the top-most anchor
-    </ResponseField>
-    <ResponseField name="icon" default="book-open" type="string">
-      Font Awesome icon.
-    </ResponseField>
-    <ResponseField name="iconType" default="duotone" type="string">
-      One of: "brands", "duotone", "light", "sharp-solid", "solid", or "thin"
-    </ResponseField>
-  </Expandable>
+<ResponseField name='topAnchor' type='Object'>
+	Override the default configurations for the top-most anchor.
+	<Expandable title='Object'>
+		<ResponseField name='name' default='Documentation' type='string'>
+			The name of the top-most anchor
+		</ResponseField>
+		<ResponseField name='icon' default='book-open' type='string'>
+			Font Awesome icon.
+		</ResponseField>
+		<ResponseField name='iconType' default='duotone' type='string'>
+			One of: "brands", "duotone", "light", "sharp-solid", "solid", or "thin"
+		</ResponseField>
+	</Expandable>
 </ResponseField>
 
-<ResponseField name="tabs" type="Tabs[]">
-  An array of navigational tabs.
-  <Expandable title="Tabs">
-    <ResponseField name="name" type="string">
-      The name of the tab label.
-    </ResponseField>
-    <ResponseField name="url" type="string">
-      The start of the URL that marks what pages go in the tab. Generally, this
-      is the name of the folder you put your pages in.
-    </ResponseField>
-  </Expandable>
+<ResponseField name='tabs' type='Tabs[]'>
+	An array of navigational tabs.
+	<Expandable title='Tabs'>
+		<ResponseField name='name' type='string'>
+			The name of the tab label.
+		</ResponseField>
+		<ResponseField name='url' type='string'>
+			The start of the URL that marks what pages go in the tab. Generally, this is the name of the folder you put
+			your pages in.
+		</ResponseField>
+	</Expandable>
 </ResponseField>
 
 <ResponseField name="api" type="API">
@@ -312,7 +312,7 @@ Example: `mintlify`
   </Expandable>
 </ResponseField>
 
-<ResponseField name="backgroundImage" type="string">
-  A background image to be displayed behind every page. See example with
-  [Infisical](https://infisical.com/docs) and [FRPC](https://frpc.io).
+<ResponseField name='backgroundImage' type='string'>
+	A background image to be displayed behind every page. See example with [Infisical](https://infisical.com/docs) and
+	[FRPC](https://frpc.io).
 </ResponseField>
