--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,97 +1,170 @@
 ---
 title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+description: 'Build and deploy our first SDK in minutes'
 ---
 
-## Setup your development
+<Note>
+	To get started you will need an API key for your account. Create one in your dashboard{' '}
+	<a href='https://borea.dev/app/settings'>settings</a>.
+</Note>
 
-Learn how to update your docs locally and deploy them to the public.
-
-### Edit and preview
+### Initialize
 
 <AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
+  <Accordion icon="download" title="Install the CLI">
+    _This is not a production command. Make an install script!_
+    
+    **Install using curl:**
+
+    <CodeGroup>
+    ```curl CURL
+    curl -L https://borea.dev/install.sh | bash
+    ```
+    </CodeGroup>
+
+    **Verify the installation:**
+
+    ```
+    borea --version
+    ```
+
+    You should see an output like this: ```Borea CLI: v.1.1.3```
+
+    If not, rerun the script and verify again.
+
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 
-    1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `docs.json` is): ``` mintlify dev ```
-    <Note>
-      If you’re currently using the legacy ```mint.json``` configuration file, please update the Mintlify CLI:
+  
+  <Accordion icon="gear" title="Configure your project">
+    Configuring Borea is simple. We'll walk you through the basics on how to generate and use our powerful ```borea.config.json``` file.
 
+    #### Run the `init` command
+    ```
+    borea init
+    ```
 
-      ```npm i -g mintlify@latest```
-      And run the new upgrade command in your docs repository:
+    This will generate a default `borea.config.json` file that looks something like this:
 
-      ```mintlify upgrade```
-      You should now be using the new ```docs.json``` configuration file. Feel free to delete the ```mint.json``` file from your repository.
-    </Note>
+        ```json borea.config.json
+          {
+            "input": {
+              "openapi": ["<path_to_spec_or_URL>"]
+            },
+            "output": {
+              "clientSDK": "Formatted OpenAPI Title by default",
+              "models": "models",
+              "tests": true,
+              "xCodeSamples": false
+            },
+            "ignores": []
+          }
+        ```
+
+    By default, SDKs and data models are generated. **We highly recommend not changing this.** Tests are a premium feature and are disabled by default, and will not work on the Hobby plan.
+    <Note>Command line arguments take precedence over  `borea.config.json`. You can overwrite the settings in the config file by passing the proper flags. For all options and flags, see <a href="/essentials/configuration">configuration</a></Note>
+
+    #### Configuration options
+
+    - `input`:
+      - `openapi` - The relative/absolute path or URL to your OpenAPI spec file (json and yaml supported)
+    - `output`:
+      - `clientSDK` - The name of the SDK when generated. Default is the formatted title in your OpenAPI spec
+      - `models` - The name of the folder to hold all the client models
+      - `tests` - Enables test generation and running on regeneration
+      - `xCodeSamples` - Enables generation of x-Code-Samples to be used in you OpenAPI spec and documentation
+    - `ingores` - Folders and files here will be ignored on regeneration, preserving any changes. Glob (gitignore) syntax
+
+  </Accordion>
+
+  <Accordion icon="check" title="Validate your spec">
+    <Note>Spec validation is not yet released. As a temporary substitute, we recommend using{' '}
+    <a href="https://quobix.com/vacuum/start/">Vacuum</a></Note>
   </Accordion>
 </AccordionGroup>
 
-### Deploy your changes
+### Generate
 
 <AccordionGroup>
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
+  <Accordion icon='wrench' title='Generate SDK'>
+    #### Run `generate` command with your API key
+    
+      ```
+      borea generate -k <your_api_key>
+      ```
+
+    You can create and manage API keys in your dashboard{' '}
+    <a href='https://borea.dev/app/settings'>settings</a>.
+
+  </Accordion>
+
+  <Accordion icon='terminal' title='Add custom code'>
+    There are many things that Borea does not yet support out of the box like OAuth, webhooks, and websockets. 
+    
+    To implement these features, or any others you want, simply add the file or folder to the `ignores` field in `borea.config.json`. 
+    Any changes you make to those files or folders will be preserved on regeneration.
+      ```json borea.config.json {11}
+      {
+        "input": {
+          "openapi": ["<path_to_spec_or_URL>"]
+        },
+        "output": {
+          "clientSDK": "Formatted OpenAPI Title by default",
+          "models": "models",
+          "tests": true,
+          "xCodeSamples": false
+        },
+        "ignores": ["webhooks.py", "lib/auth"]
+      }
+      ```
+
+    <Note>Because of how the ignores system works, the generators will not write over your changes on regeneration,{' '}
+    and therefore can lead to that code being misaligned with your API. We are working on a GitHub integration{' '}
+    to allow for merge conflict resolution, but in the mean time we recommend you keep change's footprint small.</Note>
+
+  </Accordion>
+  <Accordion icon='vial-circle-check' title='Test your SDKs'>
+    <Note>Testing is a premium feature for users on the Growth and Enterprise plans, to get access, upgrade <a href="https://borea.dev/checkout">here</a></Note>
+  </Accordion>
+
+</AccordionGroup>
+
+### Deploy
+
+<AccordionGroup>
+
+<Accordion icon='message-bot' title='Install our Github app'>
+	Our Github app automatically deploys your changes to your docs site, so you don't need to manage deployments
+	yourself. You can find the link to install on your [dashboard](https://dashboard.mintlify.com). Once the bot has
+	been successfully installed, there should be a check mark next to the commit hash of the repo.
 </Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
+<Accordion icon='rocket' title='Push your changes'>
+	[Commit and push your changes to
+	Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push) for
+	your changes to update in your docs site. If you push and don't see that the Github app successfully deployed your
+	changes, you can also manually update your docs through our [dashboard](https://dashboard.mintlify.com).
 </Accordion>
 
 </AccordionGroup>
 
-## Update your docs
-
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+## Quickstart Resources
 
 <CardGroup>
 
-<Card title="Add Content With MDX" icon="file" href="/essentials/markdown">
-  Add content to your docs with MDX syntax.
+<Card title='Add Content With MDX' icon='file' href='/essentials/markdown'>
+	Add content to your docs with MDX syntax.
 </Card>
 
-<Card
-  title="Add Code Blocks"
-  icon="square-code"
-  href="/essentials/code"
->
-  Add code directly to your docs with syntax highlighting.
+<Card title='Add Code Blocks' icon='square-code' href='/essentials/code'>
+	Add code directly to your docs with syntax highlighting.
 </Card>
 
-<Card
-  title="Add Images"
-  icon="image"
-  href="/essentials/images"
->
-  Add images to your docs to make them more engaging.
+<Card title='Add Images' icon='image' href='/essentials/images'>
+	Add images to your docs to make them more engaging.
 </Card>
 
-<Card
-  title="Add Custom Components"
-  icon="puzzle-piece"
-  href="/essentials/reusable-snippets"
->
-  Add templates to your docs to make them more reusable.
+<Card title='Add Custom Components' icon='puzzle-piece' href='/essentials/reusable-snippets'>
+	Add templates to your docs to make them more reusable.
 </Card>
 
 </CardGroup>
+```
