--- a/development.mdx
+++ b/development.mdx
@@ -1,112 +1,48 @@
 ---
 title: 'Development'
-description: 'Preview changes locally to update your docs'
+description: 'For those cracked devs that want to contribute to the cause 🫡'
 ---
 
-<Info>
-	**Prerequisite**: Please install Node.js (version 19 or higher) before proceeding. <br />
-	Please upgrade to ```docs.json``` before proceeding and delete the legacy ```mint.json``` file.
-</Info>
+Follow the below steps to contribute to
 
-Follow these steps to install and run Mintlify on your operating system:
+<Steps>
+  <Step title='Fork the Repository – Click the "Fork" button on the top right. Clone Your Fork – Use:'>
 
-**Step 1**: Install Mintlify:
+    ```shell
+    git clone https://github.com/{your-username}/{repository-name}.git
+    ```
 
-<CodeGroup>
+  </Step>
 
-```bash npm
-npm i -g mintlify
-```
+  <Step title="Create a New Branch – Name it descriptively:">
 
-```bash yarn
-yarn global add mintlify
-```
+    ```shell
+    git checkout -b feature-branch
+    ```
 
-</CodeGroup>
+  </Step>
+  <Step title='Make Your Changes – Fix bugs, add features, or improve docs.' />
+  <Step title='Commit & Push – Write a clear commit message:'>
 
-**Step 2**: Navigate to the docs directory (where the `docs.json` file is located) and execute the following command:
+    ```shell
+      git commit -m "Brief explanation of changes"
+      git push origin feature-branch
+    ```
 
-```bash
-mintlify dev
-```
+  </Step>
+  <Step title='Open a Pull Request (PR) - Go to the original repo and click "New Pull Request."'>
+    A tutorial for how to open a Pull Request can be found
+    [here](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request-from-a-fork)
+  </Step>
 
-A local preview of your documentation will be available at `http://localhost:3000`.
+</Steps>
 
-### Custom Ports
+#### Code of Conduct
 
-By default, Mintlify uses port 3000. You can customize the port Mintlify runs on by using the `--port` flag. To run
-Mintlify on port 3333, for instance, use this command:
+Please follow our [Code of Conduct](https://github.com/Borea-dev/.github/blob/main/CODE_OF_CONDUCT.md).
 
-```bash
-mintlify dev --port 3333
-```
+#### Need Help?
 
-If you attempt to run Mintlify on a port that's already in use, it will use the next available port:
+Feel free to message in the #help channel on our [Discord server](https://discord.com/invite/qpdxeF6wrK)!
 
-```md
-Port 3000 is already in use. Trying 3001 instead.
-```
-
-## Mintlify Versions
-
-Please note that each CLI release is associated with a specific version of Mintlify. If your local website doesn't align
-with the production version, please update the CLI:
-
-<CodeGroup>
-
-```bash npm
-npm i -g mintlify@latest
-```
-
-```bash yarn
-yarn global upgrade mintlify
-```
-
-</CodeGroup>
-
-## Validating Links
-
-The CLI can assist with validating reference links made in your documentation. To identify any broken links, use the
-following command:
-
-```bash
-mintlify broken-links
-```
-
-## Deployment
-
-<Tip>Unlimited editors available under the [Pro Plan](https://mintlify.com/pricing) and above.</Tip>
-
-If the deployment is successful, you should see the following:
-
-<Frame>
-	<img src='/images/checks-passed.png' style={{ borderRadius: '0.5rem' }} />
-</Frame>
-
-## Code Formatting
-
-We suggest using extensions on your IDE to recognize and format MDX. If you're a VSCode user, consider the
-[MDX VSCode extension](https://marketplace.visualstudio.com/items?itemName=unifiedjs.vscode-mdx) for syntax
-highlighting, and [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode) for code
-formatting.
-
-## Troubleshooting
-
-<AccordionGroup>
-  <Accordion title='Error: Could not load the "sharp" module using the darwin-arm64 runtime'>
-
-    This may be due to an outdated version of node. Try the following:
-    1. Remove the currently-installed version of mintlify: `npm remove -g mintlify`
-    2. Upgrade to Node v19 or higher.
-    3. Reinstall mintlify: `npm install -g mintlify`
-
-  </Accordion>
-
-  <Accordion title="Issue: Encountering an unknown error">
-  
-    Solution: Go to the root of your device and delete the \~/.mintlify folder. Afterwards, run `mintlify dev` again.
-  </Accordion>
-</AccordionGroup>
-
-Curious about what changed in the CLI version?
-[Check out the CLI changelog.](https://www.npmjs.com/package/mintlify?activeTab=versions)
+**Happy coding! 🚀**
