--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,33 +14,37 @@ of mind that they will always stay up to date.
 Check out some of our key features!
 
 <AccordionGroup>
-	<Accordion title='Idiomatic SDKs'>
+	<Accordion icon='pen' title='Idiomatic SDKs'>
 		Our generators are built by language experts. This provides the best user experience for your users, while
-		makeing each SDK feel hand crafted.
+		making each SDK feel hand crafted.
 	</Accordion>
-	<Accordion title='Production Ready'>
-		Each SDK has rigorous data modeling, testing, and errorhandling to ensure each one is ready to put in your users
+	<Accordion icon="microchip" title='Production Ready'>
+		Each SDK has rigorous data modeling, testing, and error handling to ensure each one is ready to put in your users
 		hands the moment you deploy it.
 	</Accordion>
-	<Accordion title='Deploy Remotely'>
+	<Accordion icon="flask-gear" title='SDK Testing'>
+		Ensure your SDKs work with your API using our quite of generated integrations tests. The tests only update when
+		your API does so you know you have full coverage.
+	</Accordion>
+	<Accordion icon='cubes' title='Deploy Remotely'>
 		We automatically deploy your production ready SDK to the repository of your choice.
 
-    **Supported Registries:**
-    - PyPi
-  </Accordion>
-  <Accordion title='SDK Testing'>
-    Ensure your SDKs work with your API using our quite of generated integrations tests. The tests only update when
-    your API does so you know you have full coverage.
-  </Accordion>
-  <Accordion title='CI/CD'>
-    Integrate our CLI into your pipeline so that your SDKs always stay up to date with your API.
-  </Accordion>
-  <Accordion title='Open Source'>
-    Our generators are open source under the MIT license meaning anyone can fork, and improve them. 
-    
-    We believe that open source is the future not only because we are able to build with transparency, but because it enables us to
-    build the best product possible, together.
-  </Accordion>
+    	**Supported Registries:**
+    	- PyPi
+
+    </Accordion>
+
+    <Accordion icon='merge' title='CI/CD'>
+    	Integrate our CLI into your pipeline so that your SDKs always stay up to date with your API. This enables you to
+    	focus on shipping while we keep your SDKs up to speed.
+    </Accordion>
+    <Accordion icon='osi' title='Open Source'>
+
+    	- Our generators are open source on our <a href="https://github.com/Borea-dev">GitHub</a> under the MIT license.
+    	- Features, issues and bugs are all worked on in public.
+    	- We believe that open source is the future because it enables us to build the best product possible, together.
+
+    </Accordion>
 
 </AccordionGroup>
 
