--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -33,7 +33,6 @@ description: 'Build and deploy our first SDK in minutes'
     If not, rerun the script and verify again.
 
   </Accordion>
-  
   <Accordion icon="gear" title="Configure your project">
     Configuring Borea is simple. We'll walk you through the basics on how to generate and use our powerful ```borea.config.json``` file.
 
@@ -74,7 +73,6 @@ description: 'Build and deploy our first SDK in minutes'
     - `ingores` - Folders and files here will be ignored on regeneration, preserving any changes. Glob (gitignore) syntax
 
   </Accordion>
-
   <Accordion icon="check" title="Validate your spec">
     <Note>Spec validation is not yet released. As a temporary substitute, we recommend using{' '}
     <a href="https://quobix.com/vacuum/start/">Vacuum</a></Note>
@@ -103,18 +101,18 @@ description: 'Build and deploy our first SDK in minutes'
     To implement these features, or any others you want, simply add the file or folder to the `ignores` field in `borea.config.json`. 
     Any changes you make to those files or folders will be preserved on regeneration.
       ```json borea.config.json {11}
-      {
-        "input": {
-          "openapi": ["<path_to_spec_or_URL>"]
-        },
-        "output": {
-          "clientSDK": "Formatted OpenAPI Title by default",
-          "models": "models",
-          "tests": true,
-          "xCodeSamples": false
-        },
-        "ignores": ["webhooks.py", "lib/auth"]
-      }
+        {
+          "input": {
+            "openapi": ["<path_to_spec_or_URL>"]
+          },
+          "output": {
+            "clientSDK": "Formatted OpenAPI Title by default",
+            "models": "models",
+            "tests": true,
+            "xCodeSamples": false
+          },
+          "ignores": ["webhooks.py", "lib/auth"]
+        }
       ```
 
     <Note>Because of how the ignores system works, the generators will not write over your changes on regeneration,{' '}
@@ -123,7 +121,8 @@ description: 'Build and deploy our first SDK in minutes'
 
   </Accordion>
   <Accordion icon='vial-circle-check' title='Test your SDKs'>
-    <Note>Testing is a premium feature for users on the Growth and Enterprise plans, to get access, upgrade <a href="https://borea.dev/checkout">here</a></Note>
+    <Note>Testing is not a live feature for Hobby or Growth users. Testing is currently done manually for Enterprise customers</Note>
+    {/* <Note>Testing is a premium feature for users on the Growth and Enterprise plans, to get access, upgrade <a href="https://borea.dev/checkout">here</a></Note> */}
   </Accordion>
 
 </AccordionGroup>
@@ -132,17 +131,41 @@ description: 'Build and deploy our first SDK in minutes'
 
 <AccordionGroup>
 
-<Accordion icon='message-bot' title='Install our Github app'>
-	Our Github app automatically deploys your changes to your docs site, so you don't need to manage deployments
-	yourself. You can find the link to install on your [dashboard](https://dashboard.mintlify.com). Once the bot has
-	been successfully installed, there should be a check mark next to the commit hash of the repo.
-</Accordion>
-<Accordion icon='rocket' title='Push your changes'>
-	[Commit and push your changes to
-	Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push) for
-	your changes to update in your docs site. If you push and don't see that the Github app successfully deployed your
-	changes, you can also manually update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
+  <Accordion icon='server' title='Push to remote repo (optional, but recommended)'>
+    <Steps>
+      <Step title="Create a Remote Respository">
+        Go to the remote hosting service you prefer and create a new repository.
+
+        For future compatability with Borea version control, we recommend GitHub.
+      </Step>
+      <Step title="Push your new SDK">
+
+        ``` shell
+          git init
+          git add .
+          git commit -m "initial commit"
+          git branch -M main
+          git remote add origin <remote_repo_url>
+          git push -u origin main
+
+        ```
+
+      </Step>
+
+    </Steps>
+
+  </Accordion>
+  <Accordion icon='rocket-launch' title='Publish to remote registries'>
+    <Note>
+      Work in Progress 🚧
+      To deploy to PyPi, please follow this <a href="https://packaging.python.org/en/latest/tutorials/packaging-projects/">tutorial</a>
+    </Note>
+
+    {/* ```
+      borea publish
+    ``` */}
+
+  </Accordion>
 
 </AccordionGroup>
 
@@ -150,20 +173,12 @@ description: 'Build and deploy our first SDK in minutes'
 
 <CardGroup>
 
-<Card title='Add Content With MDX' icon='file' href='/essentials/markdown'>
-	Add content to your docs with MDX syntax.
+<Card title='Configuration Guide' icon='sliders-simple' href='/guides/configuration'>
+	A full guide to configure the Borea generators, CI/CD pipeline, and deployment.
 </Card>
 
-<Card title='Add Code Blocks' icon='square-code' href='/essentials/code'>
-	Add code directly to your docs with syntax highlighting.
-</Card>
-
-<Card title='Add Images' icon='image' href='/essentials/images'>
-	Add images to your docs to make them more engaging.
-</Card>
-
-<Card title='Add Custom Components' icon='puzzle-piece' href='/essentials/reusable-snippets'>
-	Add templates to your docs to make them more reusable.
+<Card title='API Reference' icon='square-terminal' href='/api-reference'>
+	The full documentation of our public API.
 </Card>
 
 </CardGroup>
