Removed placeholder images

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,8 +3,8 @@ title: Introduction
 description: 'Borea is an open-source platform that generates SDKs from an OpenAPI spec'
 ---
 
-<img className='block dark:hidden' src='/images/hero-light.png' alt='Hero Light' />
-<img className='hidden dark:block' src='/images/hero-dark.png' alt='Hero Dark' />
+{/*<img className='block dark:hidden' src='/images/hero-light.png' alt='Hero Light' />
+<img className='hidden dark:block' src='/images/hero-dark.png' alt='Hero Dark' /> */}
 
 Borea is built so developers, startups, and enterprises can ship the tools their users want in minutes, with the peace
 of mind that they will always stay up to date.
