Fixed contributing instructions

--- a/development.mdx
+++ b/development.mdx
@@ -9,7 +9,7 @@ Follow the below steps to contribute to
   <Step title='Fork the Repository – Click the "Fork" button on the top right. Clone Your Fork – Use:'>
 
     ```shell
-    git clone https://github.com/{your-username}/{repository-name}.git
+    git clone https://github.com/Borea-dev/\<repository-name\>.git
     ```
 
   </Step>
